--- a/Lesson2/css/small.css
+++ b/Lesson2/css/small.css
@@ -33,7 +33,7 @@ main{
     text-align: center;
     padding: 15px;
     background-color: lightblue;
-    border-radius; 10px;
+    border-radius: 10px;
 }
 section{
     margin: .5rem;
