--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 h1 {
   font-size: 40px;
-  font-style: bold;
+  font-style: normal;
   text-align: center;
   color: lightgreen;
   padding: 25px;
