--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -1,24 +1,26 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
+header{
+    margin: 1em auto; 
+    max-width: 75em; 
+    height: auto;
+    background-color: blue;
+    border-radius: 10px;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #111;
-  }
+    padding: 1em;
+}
+li{
+  display: inline;
+  border-radius: 10px;
+  padding:10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: yellow;
+}
+footer{
+    border-radius: 10px;
+    text-align: center;
+    background-color:  blue;
+    border-radius: 10px;
+    color: lightgreen;
+    max-width: 75em;
+    margin: 1em auto;
+}
