--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -30,11 +30,12 @@ main{
 section{
     margin: .5rem;
     padding: 1rem;
-}t
-table#fonts{
+}
+table#fonts, table.colors{
     margin-left: auto;
     margin-right: auto;
 }
+
 footer{
     border-radius: 10px;
     text-align: center;
