--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -22,6 +22,7 @@ li{
 main{
     font-size: 15px;
     color: black;
+    margin: 1em auto; 
     max-width: 75em; 
     text-align: center;
     padding: 15px;
@@ -44,6 +45,7 @@ table#fonts, table.colors{
     padding: 8px;
 }
 footer{
+    max-width: 75em; 
     border-radius: 10px;
     text-align: center;
     background-color:  blue;
