--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -37,11 +37,11 @@ table#fonts, table.colors{
     margin-right: auto;
 #fonts {
     border-collapse: collapse;
-    width = 50%;
+    width: 50%;
 }
 #fonts td, #fonts th{
     border: 1px solid black;
-    padding: 8px;
+    padding: 12px;
 }
 footer {
     border-radius: 10px;
