--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -42,6 +42,8 @@ table#fonts, table.colors{
 #fonts td, #fonts th{
     border: 1px solid black;
     padding: 12px;
+    padding-left: 20px;
+    padding-right: 20px
 }
 footer {
     border-radius: 10px;
