--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -42,3 +42,11 @@ footer {
     max-width: 75em;
     margin: 1em auto;
 }
+em { 
+    font-size: 10px;
+    color: yellow;
+}
+#school {
+    color: lightgreen;
+    background-color: transparent;
+}
