--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -32,6 +32,9 @@ section{
     margin: .5rem;
     padding: 1rem;
 }
+table,th,td{
+    border: 2px solid blue;
+}
 
 footer {
     border-radius: 10px;
