--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -21,6 +21,7 @@ li{
 }
 main{
     font-size: 15px;
+    margin: 1em auto;
     color:black;
     max-width: 50em; 
     text-align: center;
@@ -34,6 +35,7 @@ section{
 }
 table,th,td{
     border: 2px solid blue;
+    border-collapse: collapse;
 }
 
 footer {
