--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -21,7 +21,7 @@ li{
 }
 main{
     font-size: 15px;
-    margin: 1em auto;
+    margin: auto;
     color:black;
     max-width: 50em; 
     text-align: center;
