--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -36,6 +36,8 @@ section{
 table,th,td{
     border: 2px solid blue;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
