--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -40,6 +40,30 @@ table,th,td{
     margin-right: auto;
     padding: 3px;
 }
+.headsample{
+    font: 40px bree serif;
+}
+.subheadsample{
+    font: 25px open sans;
+}
+.navsample{
+    font: 30px bree serif;
+}
+.footsample{
+    font: 20px open sans;
+}
+.h1sample{
+    font: 30px bree serif;
+}
+.h2sample{
+    font: 25px bree serif;
+}
+.h3sample{
+    font: 20px bree serif;
+}
+.parasample{
+    font: 16px open sans;
+}
 .primarycolor{
     background-color: #058FB6;
 }
