--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,6 +1,6 @@
-@media only screen and  (min-width: 32.5em) {
+@media only screen and  (min-width: 37.5em) {
    nav ul {
-       display: flex;
-       nav ul li {flex: 1 1 100%}
+       display: grid;
+       grid
    }
 }
