--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -12,9 +12,9 @@ header{
     padding: 1em;
 }
 li{
-  display: block;
+  display: inline;
   border-radius: 10px;
-  padding:10px;
+  padding:20px;
   padding-left: 30px;
   padding-right: 30px;
   background-color: yellow;
