--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,6 +1,5 @@
 @media only screen and  (min-width: 37.5em) {
-   nav ul {
-       display: grid;
-       grid
+   nav li {
+     display: inline-block;     
    }
 }
