--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 1050px) {
-    main {
+    nav {
         grid-template-columns: 1fr 1fr 1fr 1fr; 
         margin: auto; 
     }
