--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,7 +1,8 @@
 @media only screen and  (min-width: 37.5em) {
-   ul li {
+   ul {
      display: inline; 
      max-width: 75em;  
-     margin: auto;  
+     margin: auto; 
+     grid -template-columns: 1fr 1fr 1fr 1fr;
    }
 }
