--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -14,7 +14,7 @@ header{
 li{
   display: inline;
   border-radius: 10px;
-  margin: 5ps;
+  margin: 20px;
   padding:10px;
   padding-left: 30px;
   padding-right: 30px;
