--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -6,6 +6,8 @@
      margin: 30px;
    }
    li {
-     margin: 40px;  
+     margin: 40px; 
+     margin-top: 50px:
+     border: 1px black; 
    }
 }
