--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -15,7 +15,7 @@ li{
   display: inline;
   border-radius: 10px;
   margin: 5px;
-  margin: 10px;
+  margin-top: 10px;
   padding:10px;
   padding-left: 30px;
   padding-right: 30px;
@@ -49,7 +49,7 @@ table,tr,td{
     padding: 3px;
 }
 tr, td{
-    padding 10px;
+    padding: 10px;
 }
 .headsample{
     font: 40px bree serif;
