--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -16,7 +16,7 @@ li{
   border-radius: 10px;
   margin: 5px;
   margin-top: 10px;
-  padding:10px;
+  padding: 0.75rem;
   padding-left: 30px;
   padding-right: 30px;
   background-color: yellow;
