--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -4,7 +4,7 @@ nav, ul {
      
      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
    }
-   li {
+   ul {
      margin-top: 50px;
      border: 2px slid black; 
    }
