--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -1,9 +1,9 @@
 @media only screen and (min-width: 1050px) {
-   nav, ul, li {
-    display: grid; 
+   /* nav, ul, li {
+    display: block; 
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
        
-    }
+    } */
     ul, li {
         margin-top: 15px;
         border: 2px black;
