--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -22,7 +22,7 @@ li{
   background-color: yellow;
 }
 .varr{
-  display: grid;  
+  display: inline;  
   padding: 10px;
   background-color: yellow;
   border: 1px;
