--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -4,8 +4,8 @@
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
        
     } */
-    ul, li {
-        margin-top: 15px;
-        border: 2px black;
+    ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
