--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,10 +1,12 @@
 @media only screen and  (min-width: 37.5em) {
 nav, ul {
      display: grid; 
-     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+     /* grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); */
    }
    ul {
-     margin-top: 12px;
-     border: 2px slid black; 
+     /* margin-top: 12px; */
+     /* border: 2px slid black;  */
+     display: grid;
+     grid-template-columns: 1fr 1fr 1fr 1fr;
    }
 }
