--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -12,7 +12,7 @@ header{
     padding: 1em;
 }
 li{
-  display: inline;
+  display: block;
   border-radius: 10px;
   margin: 5px;
   margin-top: 10px;
