--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -21,12 +21,12 @@ li{
   padding-right: 30px;
   background-color: yellow;
 }
- /* .varr{  
-  display: inline;  
+ .varr{  
+  display: block;  
   padding: 10px;
   background-color: yellow;
   border: 1px;
-}*/
+}
 main{
     font-size: 15px;
     margin: auto;
