--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -26,7 +26,7 @@ li{
  .varr{  
   display: block;  
   padding: 10px;
-  background-color: yellow;
+  background-color:lightblue;
   border: 1px;
 }
 main{
