--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -117,7 +117,7 @@ em {
     color: lightgreen;
     background-color: transparent;
 }
-.banner-img {
+.banner-img, news.img {
     width: 100%;
     height: auto;
 }
