--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -118,7 +118,8 @@ em {
     background-color: transparent;
 }
 .banner-img  {
-    max-width: 100%;
+    object-fit: cover;
+    width: 50%;
     height: auto;
 }
 .news-img {
