--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -117,12 +117,11 @@ em {
     color: lightgreen;
     background-color: transparent;
 }
-.banner-img  {
+.banner-img  { 
+    display: block;
     object-fit: cover;
-    width: 50%;
-    height: 50%;
-    margin: auto;
-
+    width: 40%;
+    height: 25%;
 }
 .news-img {
     
