--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -8,7 +8,7 @@
     #ham {
         display: none;
         }
-    .temperature, .preston-map{
+    div.temperature, .preston-map{
         display: none;
     }    
 }
