--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -8,5 +8,7 @@
     #ham {
         display: none;
         }
-    
+    div.temperature, .preston-map{
+            display: none;
+        }   
 }
