--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 1050px) {
-    ul {
+    /* ul {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
     .navigation li:not(#ham) {
@@ -10,5 +10,5 @@
         }
     div.temperature, .preston-map{
             display: none;
-        }   
+        }    */
 }
