--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,5 +1,5 @@
 @media only screen and  (min-width: 37.5em) {
-    nav ul {
+    /* nav ul {
         display: grid;
     
     }
@@ -11,6 +11,6 @@
  }
  #ham {
  display: none;
- }
+ } */
  
  }
