--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -12,3 +12,11 @@ header{
     text-align: center;
     padding: 1em;
 }
+li{
+    display: block;
+    border-radius: 10px;
+    padding:10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: yellow;
+  }
