--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -20,3 +20,13 @@ li{
     padding-right: 20px;
     background-color: yellow;
   }
+  main{
+    font-size: 15px;
+    margin: auto;
+    color:black;
+    max-width: 50em; 
+    text-align: center;
+    padding: 15px;
+    background-color: lightblue;
+    border-radius: 10px;
+}
