--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -51,3 +51,7 @@ em {
     font-size: 10px;
     color: yellow;
 }
+#school, header h2 a {
+    color: lightgreen;
+    background-color: transparent;
+}
