--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -8,7 +8,5 @@
     #ham {
         display: none;
         }  */
-    /* div.temperature, div.preston-map{ */
-            /* display: none; */
-        }    
+    /*
 }
