--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -7,13 +7,13 @@ header{
     margin: 1em auto; 
     max-width: 75em; 
     height: auto;
-    background-color: blue;
+    background-color: #0000ff;
     border-radius: 10px;
     text-align: center;
     padding: 1em;
 }
 li{
-    display: block;
+    display: inline;
     border-radius: 5px;
     padding: 5px;
     padding-left: 5px;
