--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -13,7 +13,7 @@ header{
     padding: 1em;
 }
 li{
-    display: inline;
+    display: block;
     border-radius: 5px;
     padding: 5px;
     padding-left: 5px;
