--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -12,8 +12,8 @@
     #ham {
         display: none;
  } 
-    div.temperature, div.preston-map{ 
+    /* div.temperature, div.preston-map{  
         display: none; 
-}    
+}  */  
  
  }
